<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_loading">Loading ads…</string>
    <string name="ad_remove">Remove ads</string>
    <string name="all_file_count">A total of %1$s files</string>
    <string name="analyzing_the_files">Analyzing the files..[%1$s]</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apk_file">APK File</string>
    <string name="app_list_failed">Failed to get app list! Please grant required permissions.</string>
    <string name="app_name">Hex Editor</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="base_ignored">(base is ignored.)</string>
    <string name="bookmark_import_fail_content">Import failed: Mark content is error.</string>
    <string name="bookmark_import_fail_length">Import failed: Mark length does not match.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build_in_dir">Built-in directories</string>
    <string name="build_in_dir_from_root_path">They are from the root (/) directory</string>
    <string name="c_code_ignore_than_0x20000000">Parts exceeding 512M (0x20000000) in length will be ignored when copying or exporting as C code.</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="character_length">characters:</string>
    <string name="choose_back_parent">Parent directory</string>
    <string name="choose_compare_file">Open File</string>
    <string name="choose_disallow_open_file">Unable to open this file</string>
    <string name="choose_empty_folder">This folder is empty~</string>
    <string name="choose_file_open_by_saf">Open with SAF</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_here_change_color">Click here to change color</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">4194ebc2fd034442bb431c1611af5d3a</string>
    <string name="common_go">Rate App</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_request">Your feedback can help us improve. Can you give us some encouragement and advice?</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compare_current_file">Compare</string>
    <string name="compare_file_is">File for comparison: &lt;font color=#FFF176>%1$s&lt;/font>%2$s</string>
    <string name="compare_file_offset">Offset</string>
    <string name="compare_result_diff_count">Comparison completed, found at least %1$s different items.</string>
    <string name="compare_rv_max_count_tip">"To avoid memory issues, this list displays a maximum of 2000 items.
Feel free to provide feedback via Google Play Store reviews or email."</string>
    <string name="content_too_long_copy_10000">Content is too long! Only 10000 chars will be copied.</string>
    <string name="continue_text">Continue</string>
    <string name="copy_base64">Copy as Base64</string>
    <string name="copy_c_code">Copy as C code</string>
    <string name="copy_hex_bytes">Copy as hex byte array</string>
    <string name="copy_ignore_than_0x1000">Parts exceeding 0x1000 in length will be ignored when copying.</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="current_file_is">Current file: %1$s</string>
    <string name="default_web_client_id">755315277618-a9a23h5kegl44rpc1pspubk8ldavkgds.apps.googleusercontent.com</string>
    <string name="dialog_hex_view_jump"><Data>"Note: 
If starting with + or -, it represents the offset relative to the selected position (currently &lt;font color=#00ff00>%1$s&lt;/font>),other wise it represents an absolute address."</Data></string>
    <string name="dialog_hex_view_jump_title">Jump</string>
    <string name="edit_dialog_lite_endian">Little Endian</string>
    <string name="edit_dialog_preview_limit">… (Due to memory limits, only up to 2048 bytes can be previewed here)</string>
    <string name="edit_dialog_signed">Signed</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_not_found_document_ui">Export failed. Your device is missing DocumentUI</string>
    <string name="exit_anyway">Exit anyway</string>
    <string name="explore_installed_apk">Explore installed APK files</string>
    <string name="export">Export</string>
    <string name="export_base64">Export as Base64</string>
    <string name="export_bin_file">Export as binary file</string>
    <string name="export_bookmark">Export Marks</string>
    <string name="export_c_code">Export as C code</string>
    <string name="export_fail">Export failed: %1$s</string>
    <string name="export_hex_bytes">Export as hex byte array</string>
    <string name="export_modify_file">Export Modified File</string>
    <string name="export_modify_file2">Save</string>
    <string name="export_modify_file_tip">Tip: Click the left button to export a copy. (Original file remains unchanged.)</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="find_jump_first">Jump to first item</string>
    <string name="find_jump_next">Find next item</string>
    <string name="find_tip_input_click_me">"The input box above only allows hex byte arrays. 
Click here to convert UTF-8, UTF-16, and other content to hexadecimal byte arrays."</string>
    <string name="hex_view_menu_bookmark">Mark</string>
    <string name="hex_view_menu_copy">Copy|Export</string>
    <string name="hex_view_menu_deselect">Deselect</string>
    <string name="hex_view_menu_edit">Edit</string>
    <string name="hex_view_menu_select">Select</string>
    <string name="hint_find_content">"Example: 00 01 ?? ?? ?? 33 33 
(Purchase ad removal service to use '??' for fuzzy matching)"</string>
    <string name="import_str">Import</string>
    <string name="only_search_align">Only search aligned positions:</string>
    <string name="selection_end">End:</string>
    <string name="selection_start">Start:</string>
    <string name="selection_tip">"Note: The position starts from 0. You can input simple expressions like 20+1F or 4F-10, don't include other characters!"</string>
    <string name="sub_description">"1. Permanently removes ads
 2. Ability to use \"??\" as search keywords for fuzzy matching
 3. The maximum value for \"rebase\" has been raised to 0x70_0000_0000_0000.
 4. Future premium features will also be available for free"</string>
    <string name="sub_description_2">"Note: Prices rising as features grow!
 Next up: Binary XML decoding (e.g. AndroidManifest.xml)"</string>
    <string name="sub_description_title">Ad-Free Service:</string>
    <string name="sub_getting_price_wait">"Fetching latest price, 
please wait…"</string>
    <string name="tip_how_bookmark">"Tip: In the hex view above,
click on the byte you want to mark,
then drag the handle to select it.
A menu with a [Mark] button will appear."</string>
    <string name="tip_how_edit">"Tip: In the hex view above, 
click on the byte to be modified, 
and a menu with an [Edit] button will appear."</string>
    <string name="tip_if_ad_not_removed">Tip: If you are still seeing ads after purchasing for a few minutes, please check if the payment went through successfully (some credit cards may take longer to process). Once you confirm that the payment has been made, please try clearing the cache of Google Play or the data of this app (or reinstalling it).</string>
</resources>