<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:ellipsize="middle" android:id="@id/tv_file_name" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" android:paddingHorizontal="10.0dip" />
        <TextView android:id="@id/tv_pos_len" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="10.0dip" />
        <TextView android:textColor="#fff9a825" android:gravity="center_vertical" android:id="@id/tv_warning" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/copy_ignore_than_0x1000" android:paddingHorizontal="10.0dip" android:paddingVertical="6.0dip" />
        <TextView android:textColor="#fff9a825" android:gravity="center_vertical" android:id="@id/tv_warning2" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/c_code_ignore_than_0x20000000" android:paddingHorizontal="10.0dip" android:paddingVertical="6.0dip" />
        <TextView android:gravity="center_vertical" android:id="@id/bt_copy_hex_array" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/copy_hex_bytes" android:paddingHorizontal="10.0dip" />
        <TextView android:gravity="center_vertical" android:id="@id/bt_copy_base64" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/copy_base64" android:paddingHorizontal="10.0dip" />
        <TextView android:gravity="center_vertical" android:id="@id/bt_copy_c_code" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/copy_c_code" android:paddingHorizontal="10.0dip" />
        <TextView android:gravity="center_vertical" android:id="@id/bt_export_hex_arr" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/export_hex_bytes" android:paddingHorizontal="10.0dip" />
        <TextView android:gravity="center_vertical" android:id="@id/bt_export_base64" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/export_base64" android:paddingHorizontal="10.0dip" />
        <TextView android:gravity="center_vertical" android:id="@id/bt_export_file" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/export_bin_file" android:paddingHorizontal="10.0dip" />
        <TextView android:gravity="center_vertical" android:id="@id/bt_export_c_code" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/export_c_code" android:paddingHorizontal="10.0dip" />
    </LinearLayout>
    <FrameLayout android:id="@id/loading" android:background="?selectableItemBackground" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
</FrameLayout>