<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/bg_menu_hex_view" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="13.0sp" android:gravity="center_vertical" android:id="@id/bt_copy" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/hex_view_menu_copy" android:paddingHorizontal="10.0dip" android:paddingVertical="12.0dip" />
    <TextView android:textSize="13.0sp" android:gravity="center_vertical" android:id="@id/bt_select" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/hex_view_menu_select" android:paddingHorizontal="10.0dip" />
    <TextView android:textSize="13.0sp" android:gravity="center_vertical" android:id="@id/bt_edit" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/hex_view_menu_edit" android:paddingHorizontal="10.0dip" />
    <TextView android:textSize="13.0sp" android:gravity="center_vertical" android:id="@id/bt_bookmark" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/hex_view_menu_bookmark" android:paddingHorizontal="10.0dip" />
    <ImageView android:id="@id/bt_deselect" android:background="?android:selectableItemBackground" android:padding="10.0dip" android:layout_width="40.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_twotone_close_24" android:contentDescription="@string/hex_view_menu_deselect" android:tooltipText="@string/hex_view_menu_deselect" app:tint="?android:textColor" />
</LinearLayout>