<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#ff202020" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="start" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:id="@id/bt_export" android:background="@drawable/bg_bt_2" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_margin="8.0dip" android:text="@string/export" android:paddingHorizontal="8.0dip" />
        <TextView android:gravity="center" android:id="@id/bt_import" android:background="@drawable/bg_bt_2" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_margin="8.0dip" android:text="@string/import_str" android:paddingHorizontal="8.0dip" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@id/rv_mark" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="56.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/tv_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/tip_how_bookmark" android:lineSpacingExtra="4.0dip" android:textAlignment="center" />
</FrameLayout>