<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff202020" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="13.0sp" android:gravity="top" android:id="@id/et_keyword" android:background="#ff222426" android:padding="8.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_find_content" android:maxLines="3" android:lines="3" android:maxLength="49152" android:fontFamily="monospace" android:importantForAutofill="no" />
    <TextView android:textSize="12.0sp" android:textColor="#ff64b5f6" android:id="@id/bt_other_content" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/find_tip_input_click_me" android:paddingHorizontal="10.0dip" android:paddingVertical="8.0dip" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/only_search_align" android:paddingHorizontal="10.0dip" />
    <RadioGroup android:orientation="horizontal" android:id="@id/radio_group_order" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="10.0dip">
        <RadioButton android:id="@id/radio_align_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="No" android:layout_weight="1.0" />
        <RadioButton android:id="@id/radio_align_4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="4" android:layout_weight="1.0" />
        <RadioButton android:id="@id/radio_align_8" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="8" android:layout_weight="1.0" />
        <RadioButton android:id="@id/radio_align_16" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="16" android:layout_weight="1.0" />
    </RadioGroup>
    <CheckBox android:ellipsize="end" android:id="@id/checkbox_only_current_file" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:layout_marginHorizontal="10.0dip" />
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="10.0dip">
        <TextView android:gravity="center" android:id="@id/bt_search_first" android:background="@drawable/bg_bt_2" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/find_jump_first" android:layout_marginEnd="10.0dip" android:paddingHorizontal="8.0dip" />
        <TextView android:gravity="end|center" android:id="@id/tv_pos" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:textIsSelectable="true" android:paddingHorizontal="10.0dip" />
        <TextView android:gravity="center" android:id="@id/bt_search_next" android:background="@drawable/bg_bt_2" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/find_jump_next" android:paddingHorizontal="8.0dip" />
    </LinearLayout>
</LinearLayout>