<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/bt_close" android:background="?android:selectableItemBackground" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="16.0dip" android:src="@drawable/ic_twotone_close_24" android:paddingVertical="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/white" />
        <View android:id="@id/img_sub" android:background="@drawable/ic_baseline_auto_awesome_24" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_marginTop="40.0dip" android:backgroundTint="#ffffeb3b" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="15.0sp" android:textColor="#fffff9c4" android:id="@id/tv_sub_desc_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/sub_description_title" android:layout_marginHorizontal="20.0dip" android:paddingVertical="8.0dip" app:layout_constraintTop_toBottomOf="@id/img_sub" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/tv_sub_desc_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sub_description" android:lineSpacingExtra="8.0dip" android:layout_marginHorizontal="20.0dip" app:layout_constraintTop_toBottomOf="@id/tv_sub_desc_title" />
        <TextView android:textSize="14.0sp" android:textColor="#fffff9c4" android:id="@id/tv_sub_desc_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sub_description_2" android:lineSpacingExtra="8.0dip" android:layout_marginHorizontal="20.0dip" android:paddingVertical="8.0dip" app:layout_constraintTop_toBottomOf="@id/tv_sub_desc_1" />
        <TextView android:textColor="#ff777777" android:id="@id/tv_tip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tip_if_ad_not_removed" android:paddingHorizontal="20.0dip" android:paddingVertical="20.0dip" app:layout_constraintTop_toBottomOf="@id/bt_sub_1" />
        <TextView android:enabled="false" android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/bt_sub_1" android:background="@drawable/bg_bt_sub" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:layout_marginHorizontal="20.0dip" android:paddingVertical="16.0dip" app:layout_constraintTop_toBottomOf="@id/tv_sub_desc_2" />
        <TextView android:textSize="18.0dip" android:gravity="center" android:id="@id/wait_loading" android:background="#ee777777" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sub_getting_price_wait" android:lineSpacingExtra="6.0dip" android:elevation="10.0dip" android:layout_marginHorizontal="40.0dip" android:layout_marginVertical="10.0dip" android:paddingVertical="2.0dip" app:layout_constraintBottom_toBottomOf="@id/bt_sub_1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/bt_sub_1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>