<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hex_view_menu_select" android:layout_marginHorizontal="16.0dip" android:paddingVertical="10.0dip" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:id="@id/tv1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selection_start" android:paddingStart="20.0dip" app:layout_constraintBottom_toBottomOf="@id/et_pos_start" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/et_pos_start" />
        <EditText android:textSize="14.0sp" android:id="@id/et_pos_start" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" android:singleLine="true" android:maxLength="32" android:layout_marginHorizontal="16.0dip" android:paddingVertical="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv1" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="14.0sp" android:id="@id/tv2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selection_end" android:paddingStart="20.0dip" app:layout_constraintBottom_toBottomOf="@id/et_pos_end" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/et_pos_end" />
        <EditText android:textSize="14.0sp" android:id="@id/et_pos_end" android:layout_width="0.0dip" android:layout_height="wrap_content" android:maxLines="1" android:lines="1" android:singleLine="true" android:maxLength="32" android:layout_weight="1.0" android:paddingVertical="16.0dip" app:layout_constraintEnd_toEndOf="@id/et_pos_start" app:layout_constraintStart_toStartOf="@id/et_pos_start" app:layout_constraintTop_toBottomOf="@id/et_pos_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textSize="14.0sp" android:textColor="#ffb39ddb" android:id="@id/tv_tip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/selection_tip" android:paddingHorizontal="20.0dip" android:paddingVertical="10.0dip" />
    <CheckBox android:id="@id/checkbox_hex" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="Hex" android:layout_marginHorizontal="16.0dip" android:paddingHorizontal="10.0dip" />
</androidx.appcompat.widget.LinearLayoutCompat>