<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#ff202020" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/bt_export" android:background="@drawable/bg_bt_2" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_margin="8.0dip" android:text="@string/export_modify_file2" android:paddingHorizontal="16.0dip" />
            <TextView android:textSize="12.0sp" android:id="@id/save_tip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/export_modify_file_tip" android:layout_weight="1.0" android:paddingHorizontal="8.0dip" android:paddingVertical="4.0dip" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@id/rv_edit" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
    <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/not_edit_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/tip_how_edit" android:lineSpacingExtra="4.0dip" android:textAlignment="center" />
    <TextView android:textSize="14.0sp" android:id="@id/test_tv_preview_line" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="monospace" />
</FrameLayout>