<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/group_common" android:background="#ff202020" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="4.0dip" android:paddingHorizontal="20.0dip" android:paddingVertical="4.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_pos" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:paddingVertical="6.0dip" />
            <TextView android:id="@id/tv_len" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:paddingVertical="6.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:alpha="0.75" android:paddingVertical="4.0dip">
            <TextView android:textSize="12.0sp" android:gravity="center_vertical" android:id="@id/bt_jump" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_hex_view_jump_title" android:drawablePadding="4.0dip" android:paddingHorizontal="8.0dip" android:paddingVertical="4.0dip" app:drawableStartCompat="@drawable/twotone_navigation_18" app:drawableTint="?android:textColor" />
            <TextView android:textSize="12.0sp" android:gravity="center_vertical" android:id="@id/bt_copy" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_view_menu_copy" android:drawablePadding="4.0dip" android:paddingHorizontal="8.0dip" android:paddingVertical="4.0dip" app:drawableStartCompat="@drawable/ic_twotone_content_copy_18" app:drawableTint="?android:textColor" />
            <TextView android:textSize="12.0sp" android:gravity="center_vertical" android:id="@id/bt_bookmark" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex_view_menu_bookmark" android:drawablePadding="4.0dip" android:paddingHorizontal="8.0dip" android:paddingVertical="4.0dip" app:drawableStartCompat="@drawable/outline_bookmark_add_18" app:drawableTint="?android:textColor" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:gravity="center" android:id="@id/tv_last_item" android:background="#ff202020" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/compare_rv_max_count_tip" android:textAlignment="center" />
</FrameLayout>